# input-stream

./: CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_macos.sh  build_windows.bat
src/: input_injector.h  input_injector_linux.cpp  input_injector_mac.cpp  input_injector_win.cpp  main.cpp
